[tool.poetry]
name = "scaregr"
version = "0.1.0"
description = ""
authors = ["bodrovis <bodrovis@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
scrapegraphai = "^1.5.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
